@@ -263,6 +263,10 @@ Build
 Windows
 -------
 
+- Issue #26268: Update the prepare_ssl.py script to handle OpenSSL releases
+  that don't include the contents of the include directory (that is, 1.0.2e
+  and later).
+
 - Issue #26071: bdist_wininst created binaries fail to start and find
   32bit Python
 
